# pycon-fastapi-workshop

./: .gitignore  README.md  docker-compose.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/lib/: BackendChoice.svelte  ChannelList.svelte  Chat.svelte  CreateChannelButton.svelte  LoginForm.svelte  Messages.svelte  RegisterForm.svelte  stores.js
pycon-chat/: .gitignore  Dockerfile  Makefile  README.md  flake8.ini  pyproject.toml
pycon-chat/pycon_chat/: __main__.py  schemas.py  settings.py  web.py
pycon-chat/pycon_chat/services/: auth.py  chat.py
pycon-chat/tests/: conftest.py  test_auth_service.py  test_pycon_fastapi.py
