[tool.poetry]
name = "pycon_chat"
version = "0.1.0"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.85.1"
uvicorn = "0.19.0"
gunicorn = "20.1.0"
flake8-bugbear = "^22.9.23"
flake8-bandit = "^4.1.1"
pep8-naming = "^0.13.2"
websockets = "10.4"
requests = "^2.28.1"
pytest-asyncio = "^0.20.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
mypy = "^0.982"
flake8 = "^5.0.4"
black = "^22.10.0"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
async-asgi-testclient = "^1.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_absolute_path = true
ignore_missing_imports = true
enable_recursive_aliases = true